# SuperMarioBrosNESRecomp

./: .gitignore  .gitmodules  CMakeLists.txt  ISSUES.md  README.md  TCP.md  WIDESCREEN.md  build_all.bat  build_rdb.bat  debug_server.c  debug_server.h  extras.c  game.cfg  game.toml  nesrecomp.pin  nestopia_bridge.cpp  nestopia_bridge.h  symbols.sym  verify_mode.c  watchdog.c  watchdog.h
.github/workflows/: release.yml
docs/issues/: HANDOFF.md  WIDESCREEN_ISSUES.md
ghidra/SuperMarioBrosNES.rep/: project.prp
ghidra/SuperMarioBrosNES.rep/idata/: ~index.bak  ~journal.bak
ghidra/SuperMarioBrosNES.rep/idata/00/: 00000002.prp
ghidra/SuperMarioBrosNES.rep/idata/00/~00000002.db/: changeA.grf  db.1.gbf  snapshotA.grf
ghidra/SuperMarioBrosNES.rep/user/: ~journal.bak
tests/: baseline.json  rdb_recon_smoke.py  rdb_smoke.py  rdb_tier4_smoke.py  rdb_tiers_smoke.py  test.config.json
tools/: dbg.py
